fix: Fix low contrast accessibility issue
Fix a low contrast accessibility issue in the .blog-nav-item and
.blog-post-meta element flagged by the Chrome Lighthouse accessiblity audit

Resolves: N/a
See also: N/a

--- a/blog.css
+++ b/blog.css
@@ -47,7 +47,7 @@ h6, .h6 {
   display: inline-block;
   padding: 10px;
   font-weight: 500;
-  color: #cdddeb;
+  color: rgb(78, 78, 78)
 }
 .blog-nav-item:hover,
 .blog-nav-item:focus {
@@ -146,7 +146,7 @@ h6, .h6 {
 }
 .blog-post-meta {
   margin-bottom: 20px;
-  color: #999;
+  color: rgb(78, 78, 78);
 }
 
 
